--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "ejs": "^2.5.6",
     "express": "^4.15.2",
+    "json-loader": "^0.5.4",
     "mongodb": "^2.2.25",
+    "node-sass-middleware": "^0.11.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4"
   },
