--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Tim Starmer",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.17.2",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
     "json-loader": "^0.5.4",
