--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "Tim Starmer",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^1.0.2",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.2",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
