--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "mongodb": "^2.2.25",
     "node-sass-middleware": "^0.11.0",
     "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "react-google-charts": "^1.5.5"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
